# number-cruncher-Jawad

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
src/number_cruncher/: __init__.py  converter.py  scaler.py  stats.py
tests/: test_number_cruncher.py
